# CodeNexus

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_REPORT.md  LICENSE  MANIFEST.in  README.ko.md  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: release.yml  test.yml
codenexus/: __init__.py  agent_parser.py  cli.py  graph.py  license.py  llm.py  mcp_server.py  memory.py  parser.py  server.py  wizard.py  workspace.py
docs/: PRO_PLAN.md
tests/: test_codenexus.py
vscode-extension/: README.md  package.json  tsconfig.json
vscode-extension/src/: codelens.ts  extension.ts  service.ts  sidebar.ts
