[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codenexus-ai"
version = "1.0.2"
description = "The context engine for AI coding agents - reduce tokens by 50-70%"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "CodeNexus Contributors", email = "codenexus@example.com"}
]
keywords = ["ai", "coding", "context", "mcp", "code-analysis", "tokens", "llm", "pagerank"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "rich>=13.0",
    "mcp>=1.0.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
full = [
    "tree-sitter>=0.21.0",
    "tree-sitter-languages>=1.10.0",
    "sqlite-utils>=3.35",
]
llm = [
    "llama-cpp-python>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/uptodatelabs/CodeNexus"
Documentation = "https://github.com/uptodatelabs/CodeNexus#readme"
Repository = "https://github.com/uptodatelabs/CodeNexus"
Issues = "https://github.com/uptodatelabs/CodeNexus/issues"
Changelog = "https://github.com/uptodatelabs/CodeNexus/releases"

[project.scripts]
codenexus = "codenexus.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["codenexus"]

[tool.hatch.build.targets.sdist]
include = [
    "codenexus/",
    "tests/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
